2001-11-06 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.h, src/drill.c:
	  parse_drillfile() now ignores unstandard text in headers.
	  Also, it now returns the actual unit used (it used to return
	  the unit of the input file).
	  Minor fixes, mostly moved stuff around.

2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/drill.c, src/scm_gerber.c: Fixed bug causing backend
	  first not to generate aperture list and then barfing when
	  trying.

	
2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Added command line -d|--drill support 
	  for drill files both in graphical mode and batch mode.
	  Though are drill file tool/apertures not properly handled
	  by ->scheme converter.
	* man/gerbv.1: Changed man page to reflect the new switches.
	
2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: Cleaned up code after latest hack.
	* src/scm_gerber.c: Changed format of list delivered to
	  the backend; no delta center points. Now it's all calculated
	  center points and angles.
	* scheme/gerb-ps.scm: Accept the new list, but doesn't do anything
	  with it yet.

	
2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Inserted check for undefined apertures that
	  was earlier removed.

	
2001-11-02 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.h, src/gerber.c, src/draw.c: Now almost
	  all calculation for circles is done when parsing and
	  not when (re)drawing.
	* src/gerbv.c: Removed two unnecessary defines.
	
	
2001-10-31 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Added zooming with scroll wheel on mouse.
	* README: Added info on how to configure XFree86 for scroll mouse.

	
2001-10-28 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: Fixed bug causing parser to reports
	  points with wrong aperture. Pointed out by Dan Christian.
	

2001-10-30 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c, src/gerber.h, src/gerber.c
	  Moved new_image() to the correct place

	